...
    self.originalHeader=[UIView new]; self.originalHeader.backgroundColor=TCOriginalDark();
    [self.view addSubview:self.originalHeader];
    self.originalTitle=TCOriginalArtwork(@"00"); [self.originalHeader addSubview:self.originalTitle];
    self.pickerTab=TCOriginalButton(@"112x138",@"112x138 B",NSLocalizedString(@"Color Sources",nil),@"original.picker",self,@selector(showOriginalPicker));
    self.libraryTab=TCOriginalButton(@"320x138",@"320x138 B",NSLocalizedString(@"Saved Colors",nil),@"original.library",self,@selector(showOriginalLibrary));
    [self.originalHeader addSubview:self.pickerTab]; [self.originalHeader addSubview:self.libraryTab];
    self.homeScroll=[UIScrollView new]; self.homeScroll.accessibilityIdentifier=@"sourceControls";
    self.homeScroll.contentInsetAdjustmentBehavior=UIScrollViewContentInsetAdjustmentNever;
    [self.view addSubview:self.homeScroll]; self.homeStage=[UIView new]; [self.homeScroll addSubview:self.homeStage];
    self.originalDroplet=TCOriginalArtwork(@"245x248"); [self.homeStage addSubview:self.originalDroplet];
    self.sourceButtons=[UIStackView new]; self.sourceButtons.axis=UILayoutConstraintAxisVertical;
    self.sourceButtons.distribution=UIStackViewDistributionFillEqually;
    NSArray *art=@[@"117x532",@"117x638",@"117x744"];
    NSArray *titles=@[NSLocalizedString(@"Choose Photo",nil),NSLocalizedString(@"Take Photo",nil),NSLocalizedString(@"Live Color",nil)];
    NSArray *identifiers=@[@"choosePhoto",@"takePhoto",@"liveColor"];
    for (NSUInteger i=0;i<3;i++) {
        UIButton *button=TCOriginalButton(art[i],[art[i] stringByAppendingString:@" B"],titles[i],identifiers[i],self,@selector(selectSource:));
        button.tag=i; [self.sourceButtons addArrangedSubview:button];
    }
    [self.homeStage addSubview:self.sourceButtons];
    self.tableView=[[UITableView alloc] initWithFrame:CGRectZero style:UITableViewStylePlain];
    self.tableView.backgroundColor=TCOriginalBackground(); self.tableView.separatorStyle=UITableViewCellSeparatorStyleNone;
    self.tableView.dataSource=self; self.tableView.delegate=self;
    self.tableView.accessibilityIdentifier=@"colorHistory";
    [self.view addSubview:self.tableView];
    self.libraryFooter=[UIStackView new]; self.libraryFooter.axis=UILayoutConstraintAxisVertical; self.libraryFooter.spacing=4;
    self.importPaletteButton=[UIButton buttonWithType:UIButtonTypeSystem];
    [self.importPaletteButton setTitle:NSLocalizedString(@"Import Palette",nil) forState:UIControlStateNormal];
    self.importPaletteButton.accessibilityIdentifier=@"palette.import.open";
    [self.importPaletteButton addTarget:self action:@selector(openPaletteImport) forControlEvents:UIControlEventTouchUpInside];
...
        [self.libraryFooter addArrangedSubview:button];
    }
    self.tableView.tableFooterView=self.libraryFooter;
    self.loading=[[UIActivityIndicatorView alloc] initWithActivityIndicatorStyle:UIActivityIndicatorViewStyleMedium];
    self.loading.hidesWhenStopped=YES;
    UIButton *cancel=[UIButton buttonWithType:UIButtonTypeSystem];
    [cancel setTitle:NSLocalizedString(@"Cancel",nil) forState:UIControlStateNormal];
    cancel.titleLabel.font=[UIFont preferredFontForTextStyle:UIFontTextStyleBody]; cancel.titleLabel.adjustsFontForContentSizeCategory=YES;
    cancel.titleLabel.numberOfLines=0; cancel.accessibilityIdentifier=@"photo.import.cancel";
    [cancel.heightAnchor constraintGreaterThanOrEqualToConstant:44].active=YES;
    [cancel addTarget:self action:@selector(cancelPhotoImport) forControlEvents:UIControlEventTouchUpInside];
    self.loadingPanel=[[UIStackView alloc] initWithArrangedSubviews:@[self.loading,cancel]];
    self.loadingPanel.axis=UILayoutConstraintAxisHorizontal; self.loadingPanel.spacing=12;
    self.loadingPanel.alignment=UIStackViewAlignmentCenter; self.loadingPanel.backgroundColor=TCOriginalBackground();
    self.loadingPanel.hidden=YES; [self.view addSubview:self.loadingPanel];
...
    if (self.loading.isAnimating) return;
    if (indexPath.row >= self.colors.count) return;
    if (self.workspaceDelegate) [self.workspaceDelegate palette:self previewSavedColor:self.colors[indexPath.row]];
    else if (self.traitCollection.userInterfaceIdiom == UIUserInterfaceIdiomPad) {
        NSString *hex=self.colors[indexPath.row];
        UIAlertController *preview=[UIAlertController alertControllerWithTitle:hex message:TCRGBDescription(hex) preferredStyle:UIAlertControllerStyleAlert];
        [preview addAction:[UIAlertAction actionWithTitle:NSLocalizedString(@"Close",nil) style:UIAlertActionStyleCancel handler:nil]];
        [self presentViewController:preview animated:YES completion:nil];
    }
}
- (void)traitCollectionDidChange:(UITraitCollection *)previous {
    [super traitCollectionDidChange:previous];
    if (![previous.preferredContentSizeCategory isEqual:self.traitCollection.preferredContentSizeCategory]) { [self.tableView reloadData]; [self.view setNeedsLayout]; }
...
